# tabularis-hackernews-plugin

./: CHANGELOG.md  Cargo.toml  README.md  build.rs  manifest.json  requirements.txt  sync.sh
.github/workflows/: release.yml
src/: main.rs
