[package]
name = "tabularis-hackernews-plugin"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
duckdb = "1"
tokio = { version = "1", features = ["rt", "rt-multi-thread"] }
futures = "0.3"
